@startuml

package Client #DDDDDD {

    class Extension

    package Graphviz{
        class GraphvizController{}
        class GraphvizCreator{}
    }

    package Services{
        class PolicyModelLibApi{}
        class FileService {}
    }

    package Localization {
        class LocalizationDomain{}
        class CreateLocalizationApp {}
    }
    package Coloring {
        class ColoringSection{}
    }

 
}

package  "LibServiceApp Server" as LibServiceApp #DDDDDD{

}

GraphvizController --> FileService: uses
CreateLocalizationApp --> FileService: uses
GraphvizCreator --> FileService : uses
LocalizationDomain --> FileService : uses
LocalizationDomain --> PolicyModelLibApi: uses
Extension --> PolicyModelLibApi: uses
CreateLocalizationApp --> PolicyModelLibApi: uses
GraphvizCreator --> PolicyModelLibApi: uses
Extension --> PolicyModelLibApi: uses
Extension --> ColoringSection: uses

PolicyModelLibApi -- LibServiceApp


@enduml